# src/lib/swagger.json
@@ -516,26 +516,7 @@
                 }
               }
             },
-            "description": "(Optional) The field to order by. Can be \"\", \"difficulty\", \"votes\", \"updated\", or \"created\""
-          },
-          {
-            "in": "body",
-            "name": "order_asc",
-            "required": false,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "limit": {
-                  "type": "number",
-                  "example": 10
-                },
-                "order_asc": {
-                  "type": "boolean",
-                  "example": true
-                }
-              }
-            },
-            "description": "(Optional) Whether to order in ascending order. Default is false"
+            "description": "(Optional) The field to order by. All orderings happen in descending order. Can be \"\", \"difficulty\", \"votes\", \"updated\", or \"created\""
           },
           {
             "in": "body",
@@ -634,7 +615,7 @@
                 }
               }
             },
-            "description": "(Optional) The ID of the author to filter by"
+            "description": "(Optional) The ID of the author to filter by. Trumps all tags besides limit. This will only return the public questions of the author, with no other ordering or filtering."
           },
           {
             "in": "body",
